k8s/postgres-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-admin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-admin
  template:
    metadata:
      labels:
        component: postgres-admin
    spec:
      volumes:
        - name: postgres-admin-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres-admin
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-admin-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgresadmin
