k8s/postgres-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-user
  template:
    metadata:
      labels:
        component: postgres-user
    spec:
      volumes:
        - name: postgres-user-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres-user
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-user-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgresuser
