k8s/server-mobile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-mobile-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: servermobile
  template:
    metadata:
      labels:
        component: servermobile
    spec:
      containers:
        - name: servermobile
          image: rattawitdev/multi-server-mobile-k8s
          ports:
            - containerPort: 80
