k8s/server-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server-web
  template:
    metadata:
      labels:
        component: server-web
    spec:
      containers:
        - name: server-web
          image: rattawitdev/multi-server-web
          ports:
            - containerPort: 5000
