k8s/postgres-user-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-user-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres-user
  ports:
    - port: 5432
      targetPort: 5432
