k8s/server-mobile-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-mobile-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: servermobile
  ports:
    - port: 5050
      targetPort: 5050
