k8s/server-web-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-web-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: serverweb
  ports:
    - port: 5000
      targetPort: 5000
